--- a/mainapp/templates/mainapp/createnewitem.html
+++ b/mainapp/templates/mainapp/createnewitem.html
@@ -1,21 +1,16 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
 </head>
 <body>
-    
-
-    {% for i in allstock %}
-      <h2><li>{{i.model_name}}</li></h2>
-      {% endfor %}
-
-     
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form3 }}
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
