--- a/mainapp/templates/mainapp/home.html
+++ b/mainapp/templates/mainapp/home.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <a href="{% url 'viewstock' %}"><h1>View All Stock</h1></a>
-    <p>under development...</p>
+    
+    <a href="{% url 'createitem' way=2 %}"><h1>create item</h1></a>
     
 </body>
 </html>
