--- a/mainapp/templates/mainapp/home.html
+++ b/mainapp/templates/mainapp/home.html
@@ -7,9 +7,9 @@
     <title>Home</title>
 </head>
 <body>
-    <a href="{% url 'viewstock' %}"><h1>View All Stock</h1></a>
-    
-    <a href="{% url 'createitem' way=2 %}"><h1>create item</h1></a>
+    <a href="{% url 'viewstock' %}"><h1>View All Stock</h1></a>    
+    <a href="{% url 'createitem' way=2 %}"><h1>Create item</h1></a>
+    <a href="{% url 'buyitems' %}"><h1>Buy item</h1></a>
     
 </body>
 </html>
