--- a/mainapp/templates/mainapp/allstock.html
+++ b/mainapp/templates/mainapp/allstock.html
@@ -1,21 +1,13 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-   
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    
-</head>
-<body>
-    
+{% extends "mainapp/base.html" %}
 
+{% load static %}
+
+  
+{% block title %} All Stock {% endblock %}
+
+{% block body %}
     {% for i in allstock %}
       <h2><li>{{i.model_name}}</li></h2>
       {% endfor %}
-
+{% endblock %}
      
-</body>
-</html>
