--- a/mainapp/templates/mainapp/home.html
+++ b/mainapp/templates/mainapp/home.html
@@ -9,6 +9,12 @@
     <a href="{% url 'buyitems' %}"><h1>Buy item</h1></a>
     <a href="{% url 'createimporter' %}"><h1>Create Importer</h1></a>
     <a href="{% url 'viewimporters' %}"><h1>View Importers</h1></a>
+    <a href="{% url 'viewcustomers' %}"><h1>View customers</h1></a>
+    <a href="{% url 'createcustomer' %}"><h1>Create Customer</h1></a>
+    <a href="{% url 'saleitems' %}"><h1>Sale item</h1></a>
+    
+
+
 {% endblock %}
 
 {% block form %}{% endblock %}
