--- a/mainapp/templates/mainapp/home.html
+++ b/mainapp/templates/mainapp/home.html
@@ -4,14 +4,7 @@
 {% block title %}Home{% endblock %}
 
 {% block body %}
-    <a href="{% url 'viewstock' %}"><h1>View All Stock</h1></a>    
-    <a href="{% url 'createitem' way=2 %}"><h1>Create item</h1></a>
-    <a href="{% url 'buyitems' %}"><h1>Buy item</h1></a>
-    <a href="{% url 'createimporter' %}"><h1>Create Importer</h1></a>
-    <a href="{% url 'viewimporters' %}"><h1>View Importers</h1></a>
-    <a href="{% url 'viewcustomers' %}"><h1>View customers</h1></a>
-    <a href="{% url 'createcustomer' %}"><h1>Create Customer</h1></a>
-    <a href="{% url 'saleitems' %}"><h1>Sale item</h1></a>
+    <h2>ABHINAV TRADE AND SUPPLIERS</h2>
     
 
 
