--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -6,10 +6,119 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+    <style>
+        /* Navbar container */
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+  font-family: Arial;
+}
+
+/* Links inside the navbar */
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* The dropdown container */
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
+
+/* Add a red background color to navbar links on hover */
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+    </style>
 </head>
 <body>
-{% block body %} {% endblock %}
-{% block form %} {% endblock %}
+    <div class="navbar">
+        <a href="{% url 'home' %}">Home</a>
+        <a href="{% url 'viewstock' %}">Current Stock</a>
+        
+        <div class="dropdown">
+            <button class="dropbtn">Buy
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="{% url 'buyitems' %}">Buy Items</a>
+                <a href="{% url 'viewimporters' %}">View Importers</a>
+                <a href="{% url 'createimporter' %}">New Importer</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Sell
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="{% url 'saleitems' %}">Sell Item</a>
+                <a href="{% url 'viewcustomers' %}">View Customers</a>
+                <a href="{% url 'createcustomer' %}">New Customer</a>
+            </div>
+        </div>
+        <a href="{% url 'createitem' way=2 %}">New Item</a>
+        <div class="dropdown">
+          <button class="dropbtn">Credits<i class="fa fa-caret-down"></i></button>
+          <div class="dropdown-content">
+            <a href="{% url 'viewcreditimporters' %}">Importers</a>
+            <a href="">Customers</a>
+          </div>
+        </div>
+
+    </div>
+    <div style="margin-top: 100px;">
+        {% block body %} {% endblock %}
+    </div>
+    <div>
+        {% block form %} {% endblock %}
+    </div>
 {% block extrajavascript %} {% endblock %}
 </body>
 </html>
