--- a/mainapp/templates/mainapp/createimporter.html
+++ b/mainapp/templates/mainapp/createimporter.html
@@ -7,7 +7,9 @@
 {% block form %}
 <form action="" method="post">
     {% csrf_token %}
-    {{ form }}
+    <table>
+        {{ form.as_table }}
+    </table>
     <input type="submit" value="Submit">
 </form>
 {% endblock %}
