--- a/mainapp/templates/mainapp/createnewitem.html
+++ b/mainapp/templates/mainapp/createnewitem.html
@@ -7,7 +7,9 @@
 {% block form %}
 <form action="" method="post">
     {% csrf_token %}
-    {{ form3 }}
+    <table>
+        {{ form3.as_table }}
+    </table>
     <input type="submit" value="Submit">
 </form>
 {% endblock %}
