Phase1 all complete except frontend works

--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -108,7 +108,7 @@
           <button class="dropbtn">Credits<i class="fa fa-caret-down"></i></button>
           <div class="dropdown-content">
             <a href="{% url 'viewcreditimporters' %}">Importers</a>
-            <a href="">Customers</a>
+            <a href="{% url 'viewcreditcustomers' %}">Customers</a>
           </div>
         </div>
 
