--- a/mainapp/templates/mainapp/viewcustomers.html
+++ b/mainapp/templates/mainapp/viewcustomers.html
@@ -4,18 +4,109 @@
 
 {% block title %}View Customers{% endblock %}
 
+{% block css %}
+
+<style>
+    #stocktable {
+        font-family: Arial, Helvetica, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+    }
+
+    #stocktable td,
+    #stocktable th {
+        border: 1px solid #ddd;
+        padding: 8px;
+    }
+
+    #stocktable tr:nth-child(even) {
+        background-color: #f2f2f2;
+    }
+
+    #stocktable tr:hover {
+        background-color: #ddd;
+    }
+
+    #stocktable th {
+        padding-top: 12px;
+        padding-bottom: 12px;
+        text-align: left;
+        background-color: #04AA6D;
+        color: white;
+    }
+
+    a {
+        text-decoration: none;
+        color: black;
+    }
+</style>
+{% endblock %}
+
+
 {% block body %}
 
-{% for c in customers %}
-<h2>
-    <a href="{% url 'cusdetail' id=c.id %}">
-        <li>{{c.name}}</li>
+<div class="container">
+    <table id="stocktable">
+        <tr>
+            <th>Customer</th>
+            <th onclick="sortTable(1)">Total Sales</th>
+        </tr>
+        {% for c in customers %}
 
-    </a>
-</h2>
-{% endfor %}
+        <tr>
+            <td><a href="{% url 'cusdetail' id=c.id %}"> {{ c.name }}</a></td>
+            <td>{{ c.total_amount }}</td>
+        </tr>
+        </a>
+        {% endfor %}
+    </table>
+</div>
+
+
 {% endblock %}
 
 {% block form %}{% endblock %}
 
-{% block extrajavascript %}{% endblock %}
+{% block extrajavascript %}
+<script>
+
+    function sortTable(n) {
+        var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
+        table = document.getElementById("stocktable");
+        switching = true;
+        console.log(table);
+        dir = "asc";
+        while (switching) {
+            switching = false;
+            rows = table.rows;
+            for (i = 1; i < (rows.length - 1); i++) {
+                shouldSwitch = false;
+                x = rows[i].getElementsByTagName("TD")[n];
+                y = rows[i + 1].getElementsByTagName("TD")[n];
+                if (dir == "asc") {
+                    if (Number(x.innerHTML) > Number(y.innerHTML)) {
+                        shouldSwitch = true;
+                        break;
+                    }
+                } else if (dir == "desc") {
+                    if (Number(x.innerHTML) < Number(y.innerHTML)) {
+                        shouldSwitch = true;
+                        break;
+                    }
+                }
+            }
+            if (shouldSwitch) {
+                rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+                switching = true;
+                switchcount++;
+            }
+            else {
+                if (switchcount == 0 && dir == "asc") {
+                    dir = "desc";
+                    switching = true;
+                }
+            }
+        }
+    }
+</script>
+{% endblock %}
