--- a/mainapp/templates/mainapp/monthreport.html
+++ b/mainapp/templates/mainapp/monthreport.html
@@ -3,6 +3,55 @@
 
 
 {% block title %}Month Report{% endblock %}
+{% block css %}
+
+<style>
+    #stocktable {
+        font-family: Arial, Helvetica, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+    }
+
+    #stocktable td,
+    #stocktable th {
+        border: 1px solid #ddd;
+        padding: 8px;
+    }
+
+    #stocktable tr:nth-child(even) {
+        background-color: #f2f2f2;
+    }
+
+    #stocktable tr:hover {
+        background-color: #ddd;
+    }
+
+    #stocktable th {
+        padding-top: 12px;
+        padding-bottom: 12px;
+        text-align: left;
+        background-color: #04AA6D;
+        color: white;
+    }
+
+    a {
+        text-decoration: none;
+        color: black;
+    }
+    table tr:nth-child(2){
+        counter-reset: rowNumber;
+    }
+    
+    table tr {
+        counter-increment: rowNumber;
+    }
+    table tr td:first-child::before {
+        content: counter(rowNumber);
+        
+    }
+
+</style>
+{% endblock %}
 
 {% block body %}
 <div>
@@ -12,26 +61,23 @@
        
 </div>
 <div class="container">
-    <ol> 
+    <table id="stocktable">
+        <tr>
+            <th>No.</th>
+            <th>Bill</th>
+        </tr>
         
+        {% for sale in sale_list %}
 
-            {% for sale in sale_list %}
-            
-            
-                
-                <li style="border: solid; border-color: rgb(80, 80, 119); margin: 4px; padding: 4px; ">
-                    <div>
-                        <a  href="{% url 'salereport' id=sale.id %}">{{ sale }}</a>
-                    </div>
-                </li>    
-                  
-            
-            
-            {% endfor %}
-        
-        
-    </ol>
+        <tr>
+            <td></td>
+            <td><a href="{% url 'salereport' id=sale.id %}"> {{ sale }}</a></td>
+        </tr>
+        </a>
+        {% endfor %}
+    </table>
 </div>
+
 
 {% endblock %}
 
