--- a/mainapp/templates/mainapp/home.html
+++ b/mainapp/templates/mainapp/home.html
@@ -34,7 +34,9 @@ Get report for month
 {% csrf_token %}
 <form action="{% url 'monthreport' %}" method="POST">
     {% csrf_token %}
-    <input type="text" placeholder="enter month number" name='month'><button type="">Submit</button>
+    <input type="text" placeholder="enter month number" name='month' value="1">
+    <input type ="text" placeholder="enter year" name="year" value="2079">
+    <button type="">Submit</button>
 </form>
 </div>
 
